syntax="proto3";

package protocol;

option go_package = "./protocol";


service HelloService {
  rpc SendPicture(stream Picture) returns (Response);
}

message UserNameMessage {
  string name = 1;
}

message  HelloMessage {
  string message = 1;
}

message Picture {
  bytes content = 1;
}

message Response {
  string message = 1;
}